--- a/estilos.css
+++ b/estilos.css
@@ -11,7 +11,8 @@ body{
    margin-left: 60px;
    text-align: center;
    box-sizing:border-box;
-   float: left
+   float: left;
+   height:fit-content;
  
 }
 .informacion-de-contacto{
@@ -19,18 +20,22 @@ body{
     border-radius: 10px;
     height: 200px;
     margin:20px;
+    height:fit-content;
+    
 }
 .conocimientos{
     background-color: cornflowerblue;
     border-radius: 10px;
     height: 200px;
     margin:20px;
+    height:fit-content;
 }
 .referencias{
     background-color: cornflowerblue;
     border-radius: 10px;
     height: 200px;
     margin:20px;
+    height:fit-content;
 
 }
 .redes{
@@ -39,6 +44,7 @@ body{
     height: 100px;
     margin:20px;
     text-decoration: underline;
+    height:fit-content;
 
 }
 
@@ -49,7 +55,8 @@ aside{
     margin-right: 60px;
     text-align: center;
     box-sizing:border-box;
-    float: right
+    float: right;
+    height: fit-content;
 }
 h3{
     font-size: 30px;
@@ -122,7 +129,7 @@ ul{
 @media screen and (max-width: 1024px){
     .resumen{width:100%}
 }
-@media screen and (max-width:480px){
+@media screen and(min-width:321px)and (max-width:1023px){
     .resumen{width:100%}
 }
 @media screen and (max-width:320px){
